tests/gke-autopilot/00-install.yaml
apiVersion: platform-engineering.dylanmoore.dev/v1alpha1
kind: XCluster
metadata:
  name: test-cluster-composite
spec:
  name: test-cluster
  location: us-west1
  clusterDeletionProtection: false
