tests/gke-autopilot/00-assert.yaml
apiVersion: platform-engineering.dylanmoore.dev/v1alpha1
kind: XCluster
metadata:
  name: test-cluster-composite
spec:
  clusterDeletionProtection: false
  compositionRef:
    name: gke-autopilot.google.platform-engineering.dylanmoore.dev
  deletionPolicy: Delete
  location: us-west1
  name: test-cluster
  providerConfigName: default
  (resourceRefs[?kind == 'Network']):
    - apiVersion: compute.gcp.upbound.io/v1beta1
  (resourceRefs[?kind == 'Subnetwork']):
    - apiVersion: compute.gcp.upbound.io/v1beta2
status:
  (conditions[?type == 'Ready']):
    - reason: Available
      status: "True"
  (conditions[?type == 'Synced']):
    - reason: ReconcileSuccess
      status: "True"
---
apiVersion: compute.gcp.upbound.io/v1beta1
kind: Network
metadata:
  annotations:
    crossplane.io/external-name: gke-ap-network-test-cluster-5f212f2280f63700b
  labels:
    crossplane.io/composite: test-cluster-composite
    network.platform-engineering.dylanmoore.dev/network-id: gke-ap-network-test-cluster-5f212f2280f63700b
  name: gke-ap-network-test-cluster-5f212f2280f63700b
  ownerReferences:
    - apiVersion: platform-engineering.dylanmoore.dev/v1alpha1
      blockOwnerDeletion: true
      controller: true
      kind: XCluster
      name: test-cluster-composite
spec:
  deletionPolicy: Delete
  forProvider:
    autoCreateSubnetworks: false
    bgpBestPathSelectionMode: LEGACY
    networkFirewallPolicyEnforcementOrder: AFTER_CLASSIC_FIREWALL
    project: plat-eng-20250815044903
    routingMode: REGIONAL
  providerConfigRef:
    name: default
status:
  atProvider:
    id: projects/plat-eng-20250815044903/global/networks/gke-ap-network-test-cluster-5f212f2280f63700b
  (conditions[?type == 'Ready']):
    - reason: Available
      status: "True"
  (conditions[?type == 'Synced']):
    - reason: ReconcileSuccess
      status: "True"

---

apiVersion: compute.gcp.upbound.io/v1beta2
kind: Subnetwork
metadata:
  annotations:
    crossplane.io/composition-resource-name: gke-ap-subnetwork-test-cluster-5f212f2280f637
    crossplane.io/external-create-pending: "2025-08-22T03:52:44Z"
    crossplane.io/external-create-succeeded: "2025-08-22T03:52:44Z"
    crossplane.io/external-name: gke-ap-subnetwork-test-cluster-5f212f2280f637
  creationTimestamp: "2025-08-22T03:52:43Z"
  finalizers:
    - finalizer.managedresource.crossplane.io
  generation: 3
  labels:
    crossplane.io/composite: test-cluster-composite
  name: gke-ap-subnetwork-test-cluster-5f212f2280f637
  ownerReferences:
    - apiVersion: platform-engineering.dylanmoore.dev/v1alpha1
      blockOwnerDeletion: true
      controller: true
      kind: XCluster
      name: test-cluster-composite
      uid: 5468af9c-ea15-4dcb-a644-118e7c018546
  resourceVersion: "9212"
  uid: 483e73ca-5201-4628-a8f6-3758961cddaf
spec:
  deletionPolicy: Delete
  forProvider:
    ipCidrRange: 172.16.0.0/16
    network: gke-ap-network-test-cluster-5f212f2280f63700b
    networkRef:
      name: gke-ap-network-test-cluster-5f212f2280f63700b
    networkSelector:
      matchControllerRef: true
    privateIpGoogleAccess: true
    privateIpv6GoogleAccess: DISABLE_GOOGLE_ACCESS
    project: plat-eng-20250815044903
    purpose: PRIVATE
    region: us-west1
    secondaryIpRange:
      - ipCidrRange: 10.200.0.0/14
        rangeName: pods
      - ipCidrRange: 10.204.0.0/16
        rangeName: services
    stackType: IPV4_ONLY
  initProvider: {}
  managementPolicies:
    - '*'
  providerConfigRef:
    name: default
status:
  (conditions[?type == 'Ready']):
    - reason: Available
      status: "True"
  (conditions[?type == 'Synced']):
    - reason: ReconcileSuccess
      status: "True"
