tests/gke-autopilot/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: gke-autopilot
spec:
  steps:
  - try:
    - apply:
        file: 00-install.yaml
    - assert:
        file: 00-assert.yaml
